Review and Updates

--- a/object_storage/dfstudio_metastore_delta.ipynb
+++ b/object_storage/dfstudio_metastore_delta.ipynb
@@ -36,8 +36,8 @@
    "source": [
     "import os\n",
     "\n",
-    "compartment_id = os.environ.get(\"NB_SESSION_COMPARTMENT_OCID\") #identificando o compartimento da OCI em utilização\n",
-    "logs_bucket_uri = \"oci://bucke_name@namespace\" #definindo o bucket para armazenamento de logs"
+    "compartment_id = os.environ.get(\"NB_SESSION_COMPARTMENT_OCID\") # identificando o compartimento da OCI em utilização\n",
+    "logs_bucket_uri = \"oci://bucket_name@namespace\" # definindo o bucket para armazenamento de logs"
    ]
   },
   {
