--- a/oci_vault/Using OCI Vault.ipynb
+++ b/oci_vault/Using OCI Vault.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "95d5b7d2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "df8d129e",
    "metadata": {},
    "outputs": [],
@@ -49,37 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c71ef3f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get secret content \n",
+    "# get secret content\n",
     "# https://oracle-cloud-infrastructure-python-sdk.readthedocs.io/en/latest/api/secrets/client/oci.secrets.SecretsClient.html\n",
     "\n",
     "secret = secret_client.get_secret_bundle(\n",
-    "    secret_id='ocid1.vaultsecret.oc1.sa-saopaulo-1.amaaaaaafioir7iaeo6x2iym4palxodoi2rrkpowz6rwyim2chcw7qhzhbqa', # secret OCID\n",
+    "    secret_id='ocid1.vaultsecret.....qa', # secret OCID\n",
     "    stage = 'CURRENT'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ca5faa21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# decode the secret (base64) to binary and convert the binary data to a UTF-8 str\n",
     "passwd = base64.b64decode(secret.data.secret_bundle_content.content).decode(\"utf-8\")"
