--- a/object_storage/Databricks reading Object Storage.ipynb
+++ b/object_storage/Databricks reading Object Storage.ipynb
@@ -108,10 +108,10 @@
     "\n",
     "# config file\n",
     "config = {\n",
-    "    \"user\": \"ocid1.user.oc\",\n",
-    "    \"fingerprint\": \"6a:5\",\n",
-    "    \"tenancy\": \"ocid1.tenancy.oc1\",\n",
-    "    \"region\": \"sa-saopaulo-1\",\n",
+    "    \"user\": \"ocid1.user.oc...\",\n",
+    "    \"fingerprint\": \"6a:5b:..\",\n",
+    "    \"tenancy\": \"ocid1.tenancy.oc1...\",\n",
+    "    \"region\": \"sa-saopaulo-1\", #exemplo de region\n",
     "    \"key_file\": key_file_path\n",
     "}\n",
     "\n",
@@ -143,7 +143,7 @@
    "source": [
     "from ocifs import OCIFileSystem\n",
     "\n",
-    "fs = OCIFileSystem(config=\"~/oci/config\")"
+    "fs = OCIFileSystem(config=\"path_to_config_file\")"
    ]
   },
   {
@@ -225,7 +225,7 @@
     "import ocifs\n",
     "df = pd.read_csv(\n",
     "    \"oci://<my_bucket>@<my_namespace/file.csv\",\n",
-    "    storage_options={\"config\": \"~/oci/config\"},\n",
+    "    storage_options={\"config\": \"path_to_config_file\"},\n",
     ")"
    ]
   },
@@ -366,8 +366,22 @@
    "notebookName": "OCI Object Storage",
    "widgets": {}
   },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
